--- a/r/re/red/redtubedating.com.html
+++ b/r/re/red/redtubedating.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the redtubedating.com privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620193515id_/http%3A//www.redtubedating.com/privacy.html%3Fprg%3D1%26id%3Dredtubedating%26pg%3D1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redtubedating.com privacy policy that was archived on 2009-09-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090919075559id_/http%3A//www.redtubedating.com/privacy.html%3Fid%3Dredtubedating%26prg%3D1%26tour%3D1%26pg%3D1) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/public.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,10 +7,10 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="icon" href="/animated_favicon.gif" type="image/gif">
 <!-- InstanceBeginEditable name="editTitle" -->
-<title>RedTubeDating - World's Best Personals</title>
+<title>Redtubedating.com - World's Best Personals</title>
 <!-- InstanceEndEditable -->
-<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1244162061/members.css">
-<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1244162061/public.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1246423330/members.css">
+<link rel="stylesheet" type="text/css" href="http://cachewp.fling.com/css/redtubedating.com/1246423330/public.css">
 <!-- InstanceBeginEditable name="editHead" -->
 <!-- InstanceEndEditable --><!-- InstanceParam name="bodyOnLoad" type="text" value="" -->
 </head>
@@ -48,7 +48,7 @@
   <tbody><tr>
     <td valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0" id="terms" class="module-white">
       <tbody><tr>
-        <td colspan="2" align="left" class="title3">REDTUBEDATING PRIVACY POLICY </td>
+        <td colspan="2" align="left" class="title3">REDTUBEDATING.COM PRIVACY POLICY </td>
       </tr>
       <tr>
         <td colspan="2"><table width="100%" border="0" cellspacing="0" cellpadding="5">
@@ -65,10 +65,10 @@
                 <td valign="top"><p>RedTubeDating Incorporated ("we" or " RedTubeDating ")
                   have adopted this privacy policy to protect your personal information and to
                   let you know how we might use it. This privacy policy only applies to activities you perform on the
-                  RedTubeDating website, transactions for purchasing RedTubeDating subscription
+                  Redtubedating.com website, transactions for purchasing RedTubeDating subscription
                   services, and activities or communications that occur using the RedTubeDating
                   service (collectively known as the "Service") and does not apply to any other
-                  Website or offline point of contact between RedTubeDating, RedTubeDating, or any
+                  Website or offline point of contact between Redtubedating.com, RedTubeDating, or any
                   other company, and consumers. This policy was implemented on January 1, 2003
                   this policy may change from time-to-time, please periodically review this
                   page. Each time you use the Service
@@ -149,22 +149,22 @@
                       personal information to help us efficiently operate the Service, to contact
                       you in connection with your transactions and other activities on the Service
                       (including, but not limited to, confirmation emails or important news that
-                      could affect your relationship with RedTubeDating), and to forward messages to
-                      you from other RedTubeDating users. These types of communications are known as
+                      could affect your relationship with Redtubedating.com), and to forward messages to
+                      you from other Redtubedating.com users. These types of communications are known as
                       "Operational Communications." In some cases, Operational
                       Communications may also contain commercial messages, such as banner ads and
                       special offers.</p>
 			  <p>We also use personal information to send
                     you newsletters, information, offers and other promotional materials for
-                    RedTubeDating's or third parties' goods or services. We attempt to send you
+                    Redtubedating.com's or third parties' goods or services. We attempt to send you
                     offers that are of value to you, such as discounts, exclusive offers or
                     special event information. The Service provides you with options to decline
-                    to receive communications from RedTubeDating (other than those contained in
+                    to receive communications from Redtubedating.com (other than those contained in
                     Operational Communications). Some of these options may only be for a certain
                     category of communications; others may be more general. By posting a profile
-                    on the Service, you are opting in to receive messages from other RedTubeDating
+                    on the Service, you are opting in to receive messages from other Redtubedating.com
                     members by email or text message. To stop receiving messages from other
-                    RedTubeDating members, change your account settings on RedTubeDating.</p>
+                    Redtubedating.com members, change your account settings on Redtubedating.com.</p>
                   <p>To operate the Service, including
                     processing your transactions and supporting your activities on the Service,
                     we may share your personal information with our agents, representatives,
@@ -202,7 +202,7 @@
                     to us. Some Co-Branded Pages may contain an action tag (also known as a Web
                     Beacon or a 1 pixel .gif file) that a third party, may use to read cookies
                     that it, or its clients, may have placed on your browser at other
-                    (non-RedTubeDating) web sites before your visit to RedTubeDating. This technology
+                    (non-Redtubedating.com) web sites before your visit to Redtubedating.com. This technology
                     is used to measure the effectiveness of advertisements on such other Websites
                     that promote Co-Branded Pages. Further, such other third parties may use the
                     information collected through this technology to learn more about your visits
@@ -230,10 +230,10 @@
                       your interests. We may also share demographic information with advertisers on
                       an anonymous and aggregated basis (i.e., without telling the advertisers your
                       identity). One of the reasons we may do this is to increase the likelihood
-                      that our advertisers' goods and services will appeal to RedTubeDating's users,
+                      that our advertisers' goods and services will appeal to Redtubedating.com's users,
                       so that we may target specific ads at specific demographic groups. Our
                       sharing of demographic information with advertisers is anonymous (i.e., we do
-                      not tell advertisers which particular RedTubeDating users are members of which
+                      not tell advertisers which particular Redtubedating.com users are members of which
                       demographic groups), subject to the rest of this privacy policy. When you
                       respond to an advertisement, however, we ask you to remember that if that ad
                       that is targeted to a demographic group and you decide to give the advertiser
@@ -267,14 +267,14 @@
                       certain communications and modify personal information or demographic
                       information you have provided to us, and to hide demographic information
                       from, or make demographic information visible to, the public users of the
-                      Service, at anytime by going to the "Account Settings" in your RedTubeDating
+                      Service, at anytime by going to the "Account Settings" in your Redtubedating.com
                       profile of the Service. Please be aware that it may take several hours for
                       the changes you make to take effect on the public areas of the Service. We
                       thank you for your patience. Please note that changing or deleting your
                       information in the "Account Settings" section of the Service, or otherwise
-                      opting-out of receipt of email communications from RedTubeDating, will only
+                      opting-out of receipt of email communications from Redtubedating.com, will only
                       change or delete the data in our database for purposes of future activities
-                      on the Service and for managing future communications from RedTubeDating. These
+                      on the Service and for managing future communications from Redtubedating.com. These
                       changes and deletions will not change or delete emails or information that we
                       may have already forwarded to other users or credit card companies or any
                       other third parties, all as provided above in this privacy policy.</p>
@@ -305,7 +305,7 @@
                         <table border="0" cellpadding="10" cellspacing="0" class="footer">
                 <tbody><tr>
                     <td align="center"><div class="txtfooter">
-                        copyright ©2006 All rights reserved, www.RedTubeDating<br>
+                        copyright ©2006 All rights reserved, www.Redtubedating.com<br>
 <a href="/jobs.html?pg=1"><b><span style="font-size: 10px">Jobs</span></b></a> |
 <a href="/terms.html?pg=1">terms of use</a> |
 <a href="/privacy.html?pg=1">privacy policy</a> |
@@ -320,13 +320,12 @@
                 </tr>
             </tbody></table> 
 
-
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-4493458-6");
+var pageTracker = _gat._getTracker("UA-4493458-1");
 pageTracker._trackPageview();
 </script>
 
