--- a/a/ar/art/articlediverse.com.html
+++ b/a/ar/art/articlediverse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the articlediverse.com privacy policy that was archived on 2008-09-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080916101535id_/http%3A//www.articlediverse.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlediverse.com privacy policy that was archived on 2009-09-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090919142745id_/http%3A//www.articlediverse.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -18,6 +18,43 @@ naa_siteid="1207822409"; naa_sitename="articlediverse.com"; naa_test="no";
 <script type="text/javascript" src="http://aa.voice2page.com/naa_1x1.js"></script>
 
 <div align="center">
+
+<div style="padding-top:15px;padding-bottom:13px;">
+<script type="text/javascript"><!--
+google_ad_client = "pub-1802728246387567";
+google_ad_width = 728;
+google_ad_height = 90;
+google_ad_format = "728x90_as";
+google_ad_type = "image";
+google_ad_channel = "";
+google_color_border = "FFFFFF";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_text = "333333";
+google_color_url = "333333";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+
+<div style="padding-bottom:10px;">
+<center>
+<script type="text/javascript"><!--
+google_ad_client = "pub-1802728246387567";
+google_ad_width = 728;
+google_ad_height = 15;
+google_ad_format = "728x15_0ads_al_s";
+google_ad_channel = "";
+google_color_border = "f1f1f8";
+google_color_bg = "f1f1f8";
+google_color_link = "0000FF";
+google_color_text = "000000";
+google_color_url = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</center>
+</div>
 
 <table class="maintable" cellspacing="0" cellpadding="0" width="750">
 
@@ -104,23 +141,10 @@ This statement and the policies outlined herein are not intended to and do not c
 </p></td> <!-- End of Main Content -->
 <td class="navcell"> <!-- Starting of Navigator -->
 
-<div class="rightnavbox">
-<center>
-<a target="_blank" href="http://www.autosubmitarticle.com"><img src="http://www.articlediverse.com/images/auto-blogging-plugin.gif" alt="Auto Blogging WordPress Plugin"></a>
-</center>
-</div>
-
-<div class="spacer"></div>
-<div class="rightnavbox">
-<center>
-<a target="_blank" href="http://www.rapidcorner.com"><img src="http://www.articlediverse.com/images/rapidcorner.jpg" alt="Rapidshare Search Engine"></a>
-</center>
-</div>
-
 <div class="spacer"></div>
 <div class="rightnavbox">
 <script type="text/javascript"><!--
-google_ad_client = "pub-8615759072199266";
+google_ad_client = "pub-1802728246387567";
 google_ad_width = 160;
 google_ad_height = 90;
 google_ad_format = "160x90_0ads_al_s";
@@ -163,44 +187,28 @@ google_color_url = "008000";
 <div class="spacer"></div>
 <div class="rightnavbox">
 <left><b>Useful Resources:</b><br>
-<a target="_blank" href="http://www.articlerow.com">Daily Interesting Articles</a><br>
+<a target="_blank" href="http://6fa2655lq5ya0sf4zm09x43s2d.hop.clickbank.net/">New Article Submitter</a><br>
+<a target="_blank" href="http://f8c9e9yh0dt5-r2g-my2sphh8e.hop.clickbank.net/">Instant Article Wizard</a><br>
+<a target="_blank" href="http://d6d616wg0aqbvvc9hzyl3hqfdy.hop.clickbank.net/">Top Free PLR</a><br>
+<a target="_blank" href="http://abc7c2zrwcw0-kag-2gdf80hpa.hop.clickbank.net">Quick Income Blueprint</a><br>
+<a target="_blank" href="http://adcad03e2bo61x8zbm1i7m6sbr.hop.clickbank.net/">Article Directory Pro</a><br>
+<a target="_blank" href="http://www.articlemarketer.com/5644.html">Best Article Distribution</a><br>
+<a target="_blank" href="http://www.blucigs.com/index.php?ref=252">Electronic Cigarettes</a><br>
+<a target="_blank" href="http://www.articledirectory.name">Article Directory Dot Name</a><br>
+<a target="_blank" href="http://www.articlerow.com">Free Articles Directory</a><br>
 <a target="_blank" href="http://www.autosubmitarticle.com">Auto Blogging Script</a><br>
 <a target="_blank" href="http://www.articlecompilation.com">Article Directory</a><br>
-<a target="_blank" href="http://www.computer-guide-center.com">Cheap Computer</a><br>
 <a target="_blank" href="http://www.gadgetpaper.com">Gadget News</a><br>
 <a target="_blank" href="http://www.videofinder.info">Video Downloader</a><br>
-<a target="_blank" href="http://www.confessioncorner.info">Make A Confession</a><br>
-<a target="_blank" href="http://bodypaintgallery.blogspot.com">Body Painting Gallery</a><br>
-<a target="_blank" href="http://funnystation.blogspot.com">Funny Picture</a><br>
+<a target="_blank" href="http://www.confessioncorner.info">Confessions</a><br>
 <a target="_blank" href="http://www.imagescube.info">3D Images Generator</a><br>
-<a target="_blank" href="http://www.celebrityfresh.info">Celebrity News</a><br>
 <a target="_blank" href="http://www.articleslot.com">Free Articles</a><br>
 <a target="_blank" href="http://www.rapidcorner.com">Rapidshare Search Engine</a><br>
-<a target="_blank" href="http://www.greatfreeclassifieds.com">Free Classifieds</a><br>
-<a target="_blank" href="http://www.houseclassifiedsonline.com">House Classifieds</a><br>
+<a target="_blank" href="http://www.hotcelebrityonline.com">Celebrity Gossip</a><br>
+<a target="_blank" href="http://articlecompilation.tradepub.com">Free Magazines</a><br>
 </left>
 </div>
 
-<div class="spacer"></div>
-<div class="rightnavbox">
-<center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-8615759072199266";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_type = "image";
-google_ad_channel = "";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_text = "333333";
-google_color_url = "333333";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</center>
-</div>
 
 </td> <!-- End of Navigator -->
 </tr>
@@ -213,6 +221,24 @@ google_color_url = "333333";
 
 
 
+<div style="padding-top:15px;">
+<center>
+<script type="text/javascript"><!--
+google_ad_client = "pub-1802728246387567";
+google_ad_width = 729;
+google_ad_height = 15;
+google_ad_format = "728x15_0ads_al_s";
+google_ad_channel = "";
+google_color_border = "f1f1f8";
+google_color_bg = "f1f1f8";
+google_color_link = "0000FF";
+google_color_text = "000000";
+google_color_url = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</center>
+</div>
 
 <p align="center"><font face="Verdana" size="1">Powered by <a href="http://www.articledashboard.com">Article Dashboard</a></font></p><font face="Verdana" size="1">
 
