--- a/s/sh/sho/shopgetorganized.com.html
+++ b/s/sh/sho/shopgetorganized.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the shopgetorganized.com privacy policy that was archived on 2009-03-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090309082418id_/http%3A//www.shopgetorganized.com/custserv/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shopgetorganized.com privacy policy that was archived on 2009-09-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090919151136id_/http%3A//www.shopgetorganized.com/custserv/privacy.asp) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!-- Session src: GNETS09 --><!-- Original src: GNETS09 GNETS09 --><!-- URL src:  --><!-- src type: I --><!-- src disc: 0 --><!-- C src:  --><!-- Cursource: GNETS09 --><!-- DIV: 20 --><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!-- Session src: GNETF09 --><!-- Original src: GNETF09 GNETF09 --><!-- URL src:  --><!-- src type: I --><!-- src disc: 0 --><!-- C src:  --><!-- Cursource: GNETF09 --><!-- DIV: 20 --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="content-language" content="en-us">
 <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen">
@@ -120,10 +120,13 @@
 					<table cellpadding="0" cellspacing="0" width="100%">
 						<tbody><tr>
 							<td valign="top" align="center" bgcolor="#F1F1F1" style="margin:0px;">
-								<form action="emailsignup.asp" method="post">
+								<form action="http://www.ncrpmreports.com/cprTaylorGifts/10001/Signup/Signup.asp" method="post">
+									<input type="hidden" id="hdnPageID" name="hdnPageID" value="100">
+									<input type="hidden" id="hdnRedirectPage" name="hdnRedirectPage" value="http://www.shopgetorganized.com/emailsignup.asp">
 									<input name="email" type="text" value="Enter email address" size="20" style="width:150px;height:18px;font-size:10px;" onfocus="this.value='';"><br>
 									<input type="image" src="/grafx/singup_button.gif" alt="Sign Up!">
 								</form>
+
 							</td>
 						</tr>
 					</tbody></table>
@@ -249,6 +252,32 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 
 </script>
 
+<!-- Begin SearchRev LEAD Tag -->
+<noscript>
+<img src='https://s1.srtk.net/www/delivery/ti.php?bannerid=287&trackerid=740&cb=1379449827' width='1' height='1' border='0'/>
+</noscript>
+<script language="JavaScript" type="text/javascript">
+ovtacParamFound = 0;
+query = window.location.search.substring(1);
+parameters = query.split('&');
+for(var i=0;i < parameters.length;i++){
+paramPair = parameters[i].split('=');
+lwParam = new String(paramPair[0].toLowerCase());
+if((lwParam.substr(0,2) == 'sr')){
+     ovtacParamFound = 1;
+	}
+}
+if(ovtacParamFound == 1){
+   	var az_p=location.protocol=='https:'?'https:':'http:';
+	var az_r=Math.floor(Math.random()*999999);
+	document.write ("<" + "script language='JavaScript' ");
+	document.write ("type='text/javascript' src='"+az_p);
+	document.write ("//s1.srtk.net/www/delivery/lp.php");
+	document.write ("?bannerid=287&trackerid=740&source=\{derive\}&loc=" + escape(window.location) + "&referer=" + escape(document.referrer) + "&r=" + az_r + "'" + "><" + "/script>");
+}
+</script>
+<!-- End SearchRev Tag -->
+
 
 
 
@@ -256,7 +285,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 <!-- SiteCatalyst code version: H.2.
 Copyright 1997-2005 Omniture, Inc. More info available at
 http://www.omniture.com -->
-<script type="text/javascript" src="/js/s_code.js"></script><img name="s_i_taylorshopgetorganizedcom" height="1" width="1" border="0" alt="" src="https://taylorgifts.122.2O7.net/b/ss/taylorshopgetorganizedcom/1/H.2-Pdv-2/s37489342874274?[AQB]&amp;ndh=1&amp;t=2/1/2020%203%3A53%3A33%200%200&amp;ns=taylorgifts&amp;pageName=custservprivacy&amp;g=https%3A//web.archive.org/web/20090309082418id_/http%253A//www.shopgetorganized.com/custserv/privacy.asp&amp;cc=USD&amp;ch=shop&amp;server=TG&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script type="text/javascript" src="/js/s_code.js"></script><img name="s_i_taylorshopgetorganizedcom" height="1" width="1" border="0" alt="" src="https://taylorgifts.122.2O7.net/b/ss/taylorshopgetorganizedcom/1/H.2-Pdv-2/s33245684610065?[AQB]&amp;ndh=1&amp;t=2/1/2020%203%3A53%3A31%200%200&amp;ns=taylorgifts&amp;pageName=custservprivacy&amp;g=https%3A//web.archive.org/web/20090919151136id_/http%253A//www.shopgetorganized.com/custserv/privacy.asp&amp;cc=USD&amp;ch=shop&amp;server=TG&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 <script type="text/javascript"><!--
 /* You may give each page an identifying name, server, and channel on
 the next lines. */
