--- a/c/co/col/collegeanduniversity.net.html
+++ b/c/co/col/collegeanduniversity.net.html
@@ -1,19 +1,21 @@
-<!--The following is the downloaded HTML source of the collegeanduniversity.net privacy policy that was archived on 2009-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090623034749id_/http%3A//www.collegeanduniversity.net/index.cfm%3Fevent%3Dp.pp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the collegeanduniversity.net privacy policy that was archived on 2009-09-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090922001706id_/http%3A//www.collegeanduniversity.net/index.cfm%3Fevent%3Dp.pp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
-<meta name="y_key" content="127c33096ef2b18e">
-<meta name="verify-v1" content="YQl96KMj+09+dXMG5fEA4SAGzDAAXVlFferu+BXKgPI=">
-<meta name="msvalidate.01" content="C141F73F02D5EC8B494EF296DFD2BF9A">
+<title>CollegeAndUniversity.net - Privacy Policy</title>
+<meta name="Description" content="Browse our large database of hundreds online college degrees. Collegeanduniversity.net has resources that help you find information for online college degrees. Find the right online universities for your needs">
+<meta name="keywords" content="online college degrees, online universities, online degree programs, online degrees, online colleges, online college courses">
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 
 
+
 <link rel="meta" href="http://www.collegeanduniversity.net/labels.xml" type="application/rdf+xml" title="ICRA labels">
-<meta http-equiv="pics-Label" content="(pics-1.1 &quot;http://www.icra.org/pics/vocabularyv03/&quot; l gen true for &quot;http://collegeanduniversity.net&quot; r (n 0 s 0 v 0 l 0 oa 0 ob 0 oc 0 od 0 oe 0 of 0 og 0 oh 0 c 0)  gen true for &quot;http://www.collegeanduniversity.net&quot; r (n 0 s 0 v 0 l 0 oa 0 ob 0 oc 0 od 0 oe 0 of 0 og 0 oh 0 c 0))">
-<meta name="Description" content="Find information on Colleges and Universities. More than 1500 Online Colleges and Campus Colleges in the US. Great resource to match schools, degrees, courses and programs. 1000s of online and campus degrees and classes."> 
+<meta http-equiv="pics-Label" content="(pics-1.1 &quot;http://www.icra.org/pics/vocabularyv03/&quot; l gen true for &quot;http://collegeanduniversity.net&quot; r (n 0 s 0 v 0 l 0 oa 0 ob 0 oc 0 od 0 oe 0 of 0 og 0 oh 0 c 0)  gen true for &quot;http://www.collegeanduniversity.net&quot; r (n 0 s 0 v 0 l 0 oa 0 ob 0 oc 0 od 0 oe 0 of 0 og 0 oh 0 c 0))"> 
 
 
-<title>CollegeAndUniversity.net - Privacy Policy</title>
+<meta name="y_key" content="127c33096ef2b18e">
+<meta name="verify-v1" content="YQl96KMj+09+dXMG5fEA4SAGzDAAXVlFferu+BXKgPI=">
+<meta name="msvalidate.01" content="C141F73F02D5EC8B494EF296DFD2BF9A">
 <style type="text/css" media="all">
 	/*@import "/cu2005/CSS/cu2005.css";
 	@import "/cu2005/CSS/cu2005adminForm.css";*/
@@ -30,21 +32,18 @@
 <link rel="P3Pv1" href="http://www.collegeanduniversity.net/w3c/p3p.xml"></head>
 
 <body id="landingpage09">
+
 <div id="outer_wrapper">
 	<div id="inner_wrapper">
 	
-		<div id="header" style="background:#fff;">
+		<div id="header">
 			
-			<div><img src="/images/spacer.gif" width="1" height="5" border="0" alt=""></div>
-			
-				<div class="logo"><a href="/index.cfm"><img src="/images_member/campaign_1621.gif" border="0"></a></div>
-			
-			<div><img src="/images/spacer.gif" width="1" height="5" border="0" alt=""></div>
+				<div class="logo"><a href="/index.cfm"><img src="/images_member/_default_logo.gif" border="0"></a></div>
 		
 	<form action="/index.cfm?event=ml.sign" method="POST" onsubmit="return validatesignup(this)">
 		<input type="hidden" name="formSubmitted" value="1">
 		<input type="hidden" name="ReturnURL" value="/index.cfm?event=p.pp">
-			<ul id="newsletter" style="background:none;">
+			<ul id="newsletter">
 				<li><label for="newsletter-email">Email Address:</label><input type="text" name="Email" maxlength="50" id="newsletter-email"></li>
 				<li><label for="newsletter-zip">Zip Code:</label><input type="text" name="Zip" maxlength="10" id="newsletter-zip"></li>
 				<li class="newsletter-submit"><input type="submit" alt="Sign Up" class="signup" value="Sign Up"></li>
@@ -175,12 +174,26 @@
 		<li><a href="http://www.collegeanduniversity.net/index.cfm?event=p.po" title="CUnet Partnership Program" rel="nofollow">Partnership Opportunities</a></li>
 		<li><a href="http://www.collegeanduniversity.net/index.cfm?event=p.pp" title="CUnet, LLC Privacy Policy" rel="nofollow">Privacy Policy</a></li>
 		<li><a href="http://www.collegeanduniversity.net/index.cfm?event=p.tu" title="CUnet, LLC Terms of Use" rel="nofollow">Terms of Use</a></li>
-		
+		<li><a href="http://www.collegeanduniversity.net/colleges-programs-states/site-map.htm" title="College and University Site Map">Site Map</a></li>
 	</ul>
 	<div class="copyright">Copyright © 2004-2009 CUnet LLC. All rights reserved.</div>
 </div>
 
-</div> 
+</div>
+
+
+			<script type="text/javascript">
+				var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+				document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+			</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+			
+			<script type="text/javascript">
+				var pageTracker = _gat._getTracker("UA-5283708-1");
+				pageTracker._setDomainName(".collegeanduniversity.net");
+				pageTracker._trackPageview();
+			</script>
+			
+ 
 <div style="display:none;">
 isFromCache=null<br>
 cacheKey=null<br>
