--- a/d/di/dis/disa.mil.html
+++ b/d/di/dis/disa.mil.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the disa.mil privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620130000id_/http%3A//www.disa.mil/about/legal/security_privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the disa.mil privacy policy that was archived on 2009-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924224443id_/http%3A//www.disa.mil/about/legal/security_privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -89,7 +89,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
             <li><a href="/news">News</a></li>
             <li><a href="/news/pressresources">Press Resources</a></li>
             <li><a href="/conferences">Conferences/Events</a></li>
-			<li><a href="/news/grid">The Grid - Newsletter</a></li>
             <li><a href="/news/training">Training</a></li>
           </ul>
        </li>
@@ -111,14 +110,17 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
        </li>
         <li><a href="/careers" class="lnkCareers">CAREERS@DISA</a>
           <ul id="ddcontent-3">
-            <li><a href="/careers">Careers@DISA</a></li>
-            <li><a href="http://jobsearch.usajobs.gov/jobsearch.asp?re=5&amp;pg=1&amp;jbf574=DD04&amp;FedEmp=Y&amp;sort=rv&amp;vw=d&amp;ss=0&amp;brd=3876&amp;FedPub=Y&amp;caller=/agency_search.asp">Job Openings</a></li>
-            <li><a href="https://resume.disa.mil/">Apply for a Job</a></li>
-			<li><a href="/careers/recruiting.html">Recruiting Events</a></li>
-			<li><a href="/careers/resumeguide/index.html">Resume Guide</a></li>
-			<li><a href="/careers/newemployees/index.html">New Employees</a></li>
-			<li><a href="/careers/entry_level/index.html">Entry Level Programs</a></li>
-			<li><a href="/whca">WHCA - Military Assignments</a></li>
+            <li><a href="http://www.disa.mil/careers/index.html" class="subnavFirst">Careers@DISA</a></li>
+              <li><a href="http://jobsearch.usajobs.gov/jobsearch.asp?re=5&amp;pg=1&amp;jbf574=DD04&amp;FedEmp=Y&amp;sort=rv&amp;vw=d&amp;ss=0&amp;brd=3876&amp;FedPub=Y&amp;caller=/agency_search.asp">Job Openings</a></li>
+              <li><a href="https://resume.disa.mil/">Apply for a Job </a></li>
+			  <li><a href="/careers/resumeguide/index.html">Resume Guide</a></li>
+			  <li><a href="/careers/recruiting.html">Recruiting Events</a></li>
+			    <li><a href="/careers/benefits.html">Federal Benefits</a></li>
+				 <li><a href="/careers/training.html">Training &amp; Career Development</a></li>
+			   <li><a href="/careers/worklife.html">Quality of Work Life</a></li>
+			  <li><a href="/careers/entry_level/index.html">Entry Level Programs</a></li>
+			  <li><a href="../whca/index.html">WHCA - Military Assignments</a></li>
+			  <li><a href="/careers/newemployees/index.html">New Employees</a></li>
           </ul>
        </li>
         <li><a href="/contact" class="lnkContact">CONTACT US</a></li>
@@ -186,17 +188,11 @@ addthis_options         = 'favorites, email, digg, delicious, myspace, facebook,
         <!-- Secondary Links Area -->
 		<div class="secondaryLinks ">
           <h3>UPCOMING EVENTS</h3>
-          <div class="upcomingEvents">
-			<p><strong>06.22.09-06.25.09</strong><br>
-            Coalition Warrior Interoperability Demonstrations<br>
-            <a href="/conferences/cwid.html">more</a></p>			
-			<p><strong>06.23.09-06.26.09</strong><br>
-            DISA Europe Conference<br>
-            <a href="/conferences/europe/index.html">more</a></p>
-			<p><strong>08.07.09</strong><br>
-            Forecast to Industry<br>
-            <a href="/conferences/forecast_industry/index.html">more</a></p>
-          </div>
+          <div class="upcomingEvents">	
+          <p><strong>05.03.10-05.07.10</strong><br>
+		  DISA Customer Partnership Conference<br>
+		  Nashville, TN
+		  </p></div>
       </div>
       </div>
       <!-- End of Secondary Links Area -->
@@ -222,7 +218,7 @@ addthis_options         = 'favorites, email, digg, delicious, myspace, facebook,
       </div>
       <h1 class="DKO_LogoLink"><a href="https://www.us.army.mil/suite/page/382109" title="DKO">DKO: Defense Knowledge Online</a></h1>
       <div id="ancillary">
-        <p><a href="/index.html">Home</a> | <a href="/about/index.html">About DISA</a> | <a href="/news/index.html">News &amp; Events</a> | <a href="/services/index.html">Services &amp; Capabilities</a> | <a href="/careers/upgrade/index.html">Careers@DISA</a><br>
+        <p><a href="/index.html">Home</a> | <a href="/about/index.html">About DISA</a> | <a href="/news/index.html">News &amp; Events</a> | <a href="/services/index.html">Services &amp; Capabilities</a> | <a href="/careers/index.html">Careers@DISA</a><br>
           <a href="/about/legal/security_privacy.html">Security &amp; Privacy</a> | <a href="/about/legal/accessibility.html">Accessibility</a> | <a href="/about/legal/foia/index.html">FOIA</a> | <a href="/about/legal/inventories.html">Content Inventory</a> | <a href="/about/legal/nofearact.html">No Fear Act Notice</a><br>
           <a href="http://www.usa.gov">USA.GOV</a> | <a href="http://www.defenselink.mil"> DoD </a> | <a href="http://www.defenselink.mil/cio-nii/">OSD-NII</a><br><a href="mailto:webmaster@disa.mil">webmaster@disa.mil</a><br>
           <a href="/mps/pa/">Personnel Accountability</a> | <a href="/brac/">BRAC Information Portal</a></p>
